<resources>
    <string name="app_name">parcial-1-am-acn4a-ruanova-jorge</string>

    <!--header-->
    <string name="logo_descripcion">"Central de turnos"</string>
    <string name="mensaje_bienvenida">"Bienvenido: "</string>
    <string name="usuario_logueado">"Usuario logueado"</string>

    <!--body home-->
    <string name="titulo_home">"Bienvenido a Central de Turnos"</string>

    <string name="login_input_uno">"Ingrese su correo electronico"</string>
    <string name="login_input_dos">"Ingrese su contraseña"</string>
    <string name="btn_login">"Ingresar"</string>
    <string name="btn_recuperar">"Recuperar Acceso"</string>


<!--    Recuperar contraseña-->
    <string name="titulo_recuperar">"Recuperar contraseña"</string>
    <string name="error_recuperar1">"Debe ingresar un correo electronico para continuar"</string>
    <string name="error_recuperar2">"Ha habido un error. Intente mas tarde"</string>
    <string name="titulo_recuperar_confirmado">"Su operacion ha sido realizada."</string>
    <string name="texto_recuperar_confirmado">"Revise su bandeja de entrada donde encontra las intrucciones para cambiar su contraseña."</string>
    <string name="texto_recuperar_confirmado2">"En caso de tener inconvenientes, comuniquese con su administrador de servicios."</string>

    <!--Vista medico-->
    <string name="medico_saludo">Dr. %1$s</string>
    <string name="titulo_vista_medico">"Panel Vista Medica"</string>
    <string name="btn_mis_turnos_medico">"Turnos asignados"</string>



    <!--Proceso de login-->
    <string name="error_log_campos_vacios">"Debe completar usuario y contraseña para ingresar"</string>
    <string name="error_log_datos_invalidos">"Los datos ingresados son inválidos"</string>


<!--Vista paciente-->
<!--    Home-->
    <string name="titulo_vista_paciente">"Panel Vista Paciente"</string>
    <string name="btn_nuevo_turno">"Nuevo Turno"</string>
    <string name="btn_mis_turnos">"Mis Turnos"</string>
    <string name="btn_mis_datos">"Mis Datos"</string>
    <string name="btn_mensajes">"Novedades"</string>
    <string name="btn_salir">"Salir"</string>
    <!--    Turnos-->
    <string name="titulo_turnos_paciente">"Mi historial de turnos"</string>
    <string name="btn_volver">"Volver"</string>

    <!--body nuevo turno-->
    <string name="sin_turnos_generados">"No hay turnos generados"</string>

    <!--body nuevo turno-->
    <string name="titulo_nuevo_turno">"Solicitud de turno"</string>
    <string name="btn_solicitar_turno">"Solicitar"</string>

    <string name="btn_home">"Volver"</string>

    <string name="turno_fecha">"Seleccione una fecha para su turno"</string>

    <!--Horarios disponibles-->
    <string name="turno_hora">"Seleccione una hora para su turno"</string>

    <string-array name="horarios_atencion">
        <item />
        <item>9:00</item>
        <item>9:30</item>
        <item>10:00</item>
        <item>10:30</item>
        <item>11:00</item>
        <item>11:30</item>
        <item>12:00</item>
        <item>12:30</item>
        <item>14:00</item>
        <item>14:30</item>
        <item>15:00</item>
        <item>15:30</item>
        <item>16:00</item>
        <item>16:30</item>
        <item>17:00</item>
        <item>17:30</item>
    </string-array>

    <!--Horarios disponibles-->
    <string name="tituloEspecialidad">"Seleccione una especialidad"</string>
    <string-array name="listado_especialidades">
        <item />
        <item>Guardia Clinica</item>
        <item>Medico Clinico</item>
        <item>Kinesiologia General</item>
        <item>Dentista</item>
        <item>Cardiologia</item>
        <item>Nutricionista</item>
    </string-array>


<!--validaciones turno y mensajes-->
    <string name="error_especialidad">"Debe seleccionar una especialidad"</string>
    <string name="error_fecha">"Debe seleccionar una fecha"</string>
    <string name="error_fecha_seleccion">"La fecha debe ser a futuro (no se adminten turnos en el dia)"</string>
    <string name="error_hora">"Debe seleccionar una hora para su turno"</string>
    <string name="error_turno_ocupado">"Disculpas. Lamentablemente no hay turnos disponibles en esa especialidad en esa fecha y horario. Cambie sus opciones para poder continuar."</string>

<!--    Confirmacion turno-->
    <string name="confirmacionTurno">"Muchas gracias"</string>
    <string name="info_turno">"Informacion sobre su turno"</string>
    <string name="turno_confirmacion_texto">Estimado %1$s.%n%nSu turno para %2$s ha sido confirmado bajo el número de confirmación %3$s para el día %4$s en el horario de %5$s hs.</string>



    <string name="copyright_uno">"Copyright © 2024, Central de turnos"</string>
    <string name="copyright_dos">"Todos los derechos reservados"</string>

</resources>