<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#233877"
    tools:context=".MainActivity">

    <!-- header -->
    <include
        android:id="@+id/header"
        layout="@layout/header" />

    <LinearLayout
        android:id="@+id/body_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_constraintBottom_toTopOf="@id/footer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header">


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp"
            android:gravity="center">

            <TextView
                android:id="@+id/titulo_nuevo_turno"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/titulo_nuevo_turno"
                android:textAlignment="center"
                android:textColor="@color/mainColorLightText"
                android:textSize="@dimen/texto_titulo" />
        </TableRow>


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <Button
                android:id="@+id/btn_solicitar_turno"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:backgroundTint="@color/button_color_selection"
                android:text="@string/btn_solicitar_turno"
                android:textAllCaps="true"
                android:textColor="@color/button_text_color"
                android:textSize="@dimen/texto_botones"
                android:textStyle="bold"
                app:cornerRadius="@dimen/botones_borde"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/btn_volver_home"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:backgroundTint="@color/button_color_selection_disrruptive"
                android:text="@string/btn_home"
                android:textAllCaps="true"
                android:textColor="@color/button_text_color"
                android:textSize="@dimen/texto_botones"
                android:textStyle="bold"
                app:cornerRadius="@dimen/botones_borde"
                tools:ignore="ButtonStyle" />
        </TableRow>
    </LinearLayout>

    <!--footer-->
    <include
        android:id="@+id/footer"
        layout="@layout/footer" />

</androidx.constraintlayout.widget.ConstraintLayout>
